--- a/index.html
+++ b/index.html
@@ -19,154 +19,167 @@
   </head>
   <body>
     <header class="top">
-      <a href="index.html"
-        ><span class="logo-anterior">Web</span
-        ><span class="logo-posterior">Studio</span></a
-      >
-      <nav>
-        <ul class="navigation">
-          <li><a href="#">Agencja</a></li>
-          <li><a href="portfolio.html">Portfolio</a></li>
-          <li><a href="#">Kontakt</a></li>
-        </ul>
-      </nav>
-      <aside class="contact">
-        <a href="mailto:info@devstidio.com">info@devstudio.com</a>
-        <br />
-        <a href="tel:+48111111111">+48 111 111 111</a>
-      </aside>
+      <div class="container-navigation">
+        <div><a href="index.html" class="logo"
+          ><span class="logo-anterior">Web</span
+          ><span class="logo-posterior">Studio</span></a
+        >
+      </div>
+        <nav>
+          <ul class="navigation">
+            <li><a href="#">Agencja</a></li>
+            <li><a href="portfolio.html">Portfolio</a></li>
+            <li><a href="#">Kontakt</a></li>
+          </ul>
+        </nav>
+      </div>
+      <div class="container-contact">
+        <aside class="contact">
+          <a class="mail" href="mailto:info@devstidio.com">info@devstudio.com</a>
+          <a class="tel" href="tel:+48111111111">+48 111 111 111</a>
+        </aside>
+      </div>
     </header>
     <main>
-      <section class="header">
-        <h1>efektywne rozwiązania <br />dla waszego biznesu</h1>
-        <button type="button" class="click-to-order">Zamów usługę</button>
+      <div class="container-header">
+        <section class="header">
+          <h1 class="slogan">efektywne rozwiązania dla waszego biznesu</h1>
+          <div class="click-to-order-button"><button type="button" class="click-to-order">Zamów usługę</button>
+        </div>
       </section>
-      <section>
-        <ul class="adventages">
-          <li>
-            <h3>LOREM IPSUM</h3>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
-              arcu sem. Sed non sodales dui. Interdum et malesuada
-            </p>
-          </li>
-          <li>
-            <h3>LOREM IPSUM</h3>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
-              arcu sem. Sed non sodales dui. Interdum et malesuada
-            </p>
-          </li>
-          <li>
-            <h3>LOREM IPSUM</h3>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
-              arcu sem. Sed non sodales dui. Interdum et malesuada
-            </p>
-          </li>
-        </ul>
-      </section>
-      <section>
-        <h2 class="what-do-we-do">Czym się zajmujemy</h2>
-        <ul class="what-do-we-do-list">
-          <li>
-            <img
-              width="370"
-              height="294"
-              src="images/boxone.jpg"
-              alt="photo of a person typing on a keyboard"
-            />
-          </li>
-          <li>
-            <img
-              width="370"
-              height="294"
-              src="images/boxtwo.jpg"
-              alt="a person holding a mobile phone and searching for mobile phones on a laptop"
-            />
-          </li>
-          <li>
-            <img
-              width="370"
-              height="294"
-              src="images/boxthree.jpg"
-              alt="a person choosing colours on a tablet"
-            />
-          </li>
-        </ul>
-      </section>
-      <section class="our-team">
-        <h2 class="our-team-title">Nasz zespół</h2>
-        <ul class="our-team-list">
-          <li>
-            <figure>
+      </div>
+      <div class="container-advantages">
+        <section>
+          <ul class="adventages">
+            <li>
+              <h3>LOREM IPSUM</h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+                arcu sem. Sed non sodales dui. Interdum et malesuada
+              </p>
+            </li>
+            <li>
+              <h3>LOREM IPSUM</h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+                arcu sem. Sed non sodales dui. Interdum et malesuada
+              </p>
+            </li>
+            <li>
+              <h3>LOREM IPSUM</h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+                arcu sem. Sed non sodales dui. Interdum et malesuada
+              </p>
+            </li>
+          </ul>
+        </section>
+      </div>
+      <div class="container-what-do-we-do">
+        <section>
+          <h2 class="what-do-we-do">Czym się zajmujemy</h2>
+          <ul class="what-do-we-do-list">
+            <li>
               <img
-                width="270"
-                height="260"
-                src="images/imgteamcardone.jpg"
-                alt="John Doe's picture"
+                width="370"
+                height="294"
+                src="images/boxone.jpg"
+                alt="photo of a person typing on a keyboard"
               />
-              <figcaption>
-                <h3>John Doe</h3>
-                <span>Product Designer</span>
-              </figcaption>
-            </figure>
-          </li>
-          <li>
-            <figure>
+            </li>
+            <li>
               <img
-                width="270"
-                height="260"
-                src="images/imgteamcardtwo.jpg"
-                alt="John Doe's picture"
+                width="370"
+                height="294"
+                src="images/boxtwo.jpg"
+                alt="a person holding a mobile phone and searching for mobile phones on a laptop"
               />
-              <figcaption>
-                <h3>John Doe</h3>
-                <span>Frontend Developer</span>
-              </figcaption>
-            </figure>
-          </li>
-          <li>
-            <figure>
+            </li>
+            <li>
               <img
-                width="270"
-                height="260"
-                src="images/imgteamcardthree.jpg"
-                alt="John Doe's picture"
+                width="370"
+                height="294"
+                src="images/boxthree.jpg"
+                alt="a person choosing colours on a tablet"
               />
-              <figcaption>
-                <h3>John Doe</h3>
-                <span>Marketing</span>
-              </figcaption>
-            </figure>
-          </li>
-          <li>
-            <figure>
-              <img
-                width="270"
-                height="260"
-                src="images/imgteamcardfour.jpg"
-                alt="John Doe's picture"
-              />
-              <figcaption>
-                <h3>John Doe</h3>
-                <span>UI Designer</span>
-              </figcaption>
-            </figure>
-          </li>
-        </ul>
-      </section>
+            </li>
+          </ul>
+        </section>
+        <section class="our-team">
+          <h2 class="our-team-title">Nasz zespół</h2>
+          <ul class="our-team-list">
+            <li>
+              <figure>
+                <img
+                  width="270"
+                  height="260"
+                  src="images/imgteamcardone.jpg"
+                  alt="John Doe's picture"
+                />
+                <figcaption>
+                  <h3>John Doe</h3>
+                  <span>Product Designer</span>
+                </figcaption>
+              </figure>
+            </li>
+            <li>
+              <figure>
+                <img
+                  width="270"
+                  height="260"
+                  src="images/imgteamcardtwo.jpg"
+                  alt="John Doe's picture"
+                />
+                <figcaption>
+                  <h3>John Doe</h3>
+                  <span>Frontend Developer</span>
+                </figcaption>
+              </figure>
+            </li>
+            <li>
+              <figure>
+                <img
+                  width="270"
+                  height="260"
+                  src="images/imgteamcardthree.jpg"
+                  alt="John Doe's picture"
+                />
+                <figcaption>
+                  <h3>John Doe</h3>
+                  <span>Marketing</span>
+                </figcaption>
+              </figure>
+            </li>
+            <li>
+              <figure>
+                <img
+                  width="270"
+                  height="260"
+                  src="images/imgteamcardfour.jpg"
+                  alt="John Doe's picture"
+                />
+                <figcaption>
+                  <h3>John Doe</h3>
+                  <span>UI Designer</span>
+                </figcaption>
+              </figure>
+            </li>
+          </ul>
+        </section>
+      </div>
     </main>
     <footer class="footnote">
-      <a href="index.html"
-        ><span class="logo-anterior">Web</span
-        ><span class="logo-posterior-prim">Studio</span></a
-      >
-      <address class="address-bottom">
-        <span>m. Warszawa, Aleje Jerozolimskie 21</span>
-        <a href="mailto:info@devstidio.com">info@devstudio.com</a>
-        <a href="tel:+48111111111">+48 111 111 111</a>
-      </address>
+      <div class="container-footnote">
+        <a class="logo-bottom" href="index.html"
+          ><span class="logo-anterior">Web</span
+          ><span class="logo-posterior-prim">Studio</span></a
+        >
+        <address class="address-bottom">
+          <span>m. Warszawa, Aleje Jerozolimskie 21</span>
+          <a href="mailto:info@devstidio.com">info@devstudio.com</a>
+          <a href="tel:+48111111111">+48 111 111 111</a>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
