--- a/portfolio.html
+++ b/portfolio.html
@@ -25,14 +25,11 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <div class="container">
+    <!-- header -->
       <header class="top">
-        <div class="container-navigation">
-          <div><a href="index.html" class="logo"
+          <a href="index.html" class="logo"
             ><span class="logo-anterior">Web</span
-            ><span class="logo-posterior">Studio</span></a
-          >
-        </div>
+            ><span class="logo-posterior">Studio</span></a>
           <nav>
             <ul class="navigation">
               <li><a href="#">Agencja</a></li>
@@ -40,17 +37,16 @@
               <li><a href="#">Kontakt</a></li>
             </ul>
           </nav>
-        </div>
-        <div class="container-contact">
+          <div class="contact-left">
           <aside class="contact">
             <a class="mail" href="mailto:info@devstidio.com">info@devstudio.com</a>
             <a class="tel" href="tel:+48111111111">+48 111 111 111</a>
           </aside>
         </div>
       </header>
-    </div>
     <main>
-      <section>
+      <!-- filters -->
+      <section class="section">
         <div class="container-buttons">
           <ul class="portfolio-button-list">
             <li><button type="button">Wszystkie</button></li>
@@ -193,15 +189,18 @@
       </section>
     </main>
     <div class="container">
+      <!-- footer -->
       <footer class="footnote">
         <div class="container-footnote">
-          <a class="logo-bottom" href="index.html"
+          <div class="logo-bottom">
+          <a href="index.html"
             ><span class="logo-anterior">Web</span
-            ><span class="logo-posterior-prim">Studio</span></a
-          >
+            ><span class="logo-posterior-prim">Studio</span>
+            </a>
+        </div>
           <address class="address-bottom">
             <span>m. Warszawa, Aleje Jerozolimskie 21</span>
-            <a href="mailto:info@devstidio.com">info@devstudio.com</a>
+            <a class="mail-bottom" href="mailto:info@devstidio.com">info@devstudio.com</a>
             <a href="tel:+48111111111">+48 111 111 111</a>
           </address>
         </div>
