--- a/index.html
+++ b/index.html
@@ -27,32 +27,30 @@
       <nav>
         <ul class="navigation">
           <li><a href="#">Agencja</a></li>
-          <li><a href="portfolio.html">Portfolio</a></li>
+          <li><a class="portfolio-link" href="portfolio.html">Portfolio</a></li>
           <li><a href="#">Kontakt</a></li>
         </ul>
       </nav>
-      <div class="contact-left">
-        <aside class="contact">
-          <a class="mail" href="mailto:info@devstidio.com"
-            >info@devstudio.com</a
-          >
-          <a class="tel" href="tel:+48111111111">+48 111 111 111</a>
-        </aside>
-      </div>
+      <aside class="contact">
+        <a class="mail" href="mailto:info@devstidio.com">info@devstudio.com</a>
+        <a href="tel:+48111111111">+48 111 111 111</a>
+      </aside>
     </header>
+
+    <!-- main -->
+
     <main>
-      <div class="container-header">
-        <!-- main title -->
-        <section class="header" class="section">
+      <!-- main title -->
+      <section class="header" class="section">
+        <div class="container">
           <h1 class="slogan">efektywne rozwiązania dla waszego biznesu</h1>
-          <div class="click-to-order-button">
-            <button type="button" class="click-to-order">Zamów usługę</button>
-          </div>
-          <!-- advantages -->
-        </section>
-      </div>
-      <div class="container-advantages">
-        <section class="section">
+          <button type="button" class="click-to-order">Zamów usługę</button>
+        </div>
+      </section>
+      <!-- advantages -->
+
+      <section class="section">
+        <div class="container">
           <ul class="adventages">
             <li>
               <h3>LOREM IPSUM</h3>
@@ -83,11 +81,13 @@
               </p>
             </li>
           </ul>
-        </section>
-      </div>
+        </div>
+      </section>
+
       <!-- what do we do -->
-      <div class="container-what-do-we-do">
-        <section class="section">
+
+      <section class="section">
+        <div class="container">
           <h2 class="what-do-we-do">Czym się zajmujemy</h2>
           <ul class="what-do-we-do-list">
             <li>
@@ -115,13 +115,13 @@
               />
             </li>
           </ul>
-        </section>
-      </div>
+        </div>
+      </section>
 
       <!-- our team -->
 
       <section class="our-team section">
-        <div class="container-our-team-list">
+        <div class="container">
           <h2 class="our-team-title">Nasz zespół</h2>
           <ul class="our-team-list">
             <li>
@@ -134,7 +134,7 @@
                 />
                 <figcaption>
                   <h3>John Doe</h3>
-                  <span class="our-team-list-span">Product Designer</span>
+                  <span>Product Designer</span>
                 </figcaption>
               </figure>
             </li>
@@ -148,7 +148,7 @@
                 />
                 <figcaption>
                   <h3>John Doe</h3>
-                  <span class="our-team-list-span">Frontend Developer</span>
+                  <span>Frontend Developer</span>
                 </figcaption>
               </figure>
             </li>
@@ -162,7 +162,7 @@
                 />
                 <figcaption>
                   <h3>John Doe</h3>
-                  <span class="our-team-list-span">Marketing</span>
+                  <span>Marketing</span>
                 </figcaption>
               </figure>
             </li>
@@ -176,7 +176,7 @@
                 />
                 <figcaption>
                   <h3>John Doe</h3>
-                  <span class="our-team-list-span">UI Designer</span>
+                  <span>UI Designer</span>
                 </figcaption>
               </figure>
             </li>
@@ -186,7 +186,7 @@
     </main>
     <!-- footer -->
     <footer class="footnote">
-      <div class="container-footnote">
+      <div class="container">
         <div class="logo-bottom">
           <a href="index.html"
             ><span class="logo-anterior">Web</span
@@ -194,11 +194,13 @@
           </a>
         </div>
         <address class="address-bottom">
-          <span>m. Warszawa, Aleje Jerozolimskie 21</span>
-          <a class="mail-bottom" href="mailto:info@devstidio.com"
-            >info@devstudio.com</a
-          >
-          <a href="tel:+48111111111">+48 111 111 111</a>
+          <ul>
+            <li class="headquarters">m. Warszawa, Aleje Jerozolimskie 21</li>
+            <li class="mail-bottom">
+              <a href="mailto:info@devstidio.com">info@devstudio.com</a>
+            </li>
+            <li><a href="tel:+48111111111">+48 111 111 111</a></li>
+          </ul>
         </address>
       </div>
     </footer>
