--- a/portfolio.html
+++ b/portfolio.html
@@ -26,28 +26,29 @@
   </head>
   <body>
     <!-- header -->
-      <header class="top">
-          <a href="index.html" class="logo"
-            ><span class="logo-anterior">Web</span
-            ><span class="logo-posterior">Studio</span></a>
-          <nav>
-            <ul class="navigation">
-              <li><a href="#">Agencja</a></li>
-              <li><a href="portfolio.html">Portfolio</a></li>
-              <li><a href="#">Kontakt</a></li>
-            </ul>
-          </nav>
-          <div class="contact-left">
-          <aside class="contact">
-            <a class="mail" href="mailto:info@devstidio.com">info@devstudio.com</a>
-            <a class="tel" href="tel:+48111111111">+48 111 111 111</a>
-          </aside>
-        </div>
-      </header>
+    <header class="top">
+      <a href="index.html" class="logo"
+        ><span class="logo-anterior">Web</span
+        ><span class="logo-posterior">Studio</span></a
+      >
+      <nav>
+        <ul class="navigation">
+          <li><a href="#">Agencja</a></li>
+          <li><a class="portfolio-link" href="portfolio.html">Portfolio</a></li>
+          <li><a href="#">Kontakt</a></li>
+        </ul>
+      </nav>
+      <aside class="contact">
+        <a class="mail" href="mailto:info@devstidio.com">info@devstudio.com</a>
+        <a href="tel:+48111111111">+48 111 111 111</a>
+      </aside>
+    </header>
+
+    <!-- main -->
     <main>
       <!-- filters -->
-      <section class="section">
-        <div class="container-buttons">
+      <section class="portfolio-button-projects" class="section">
+        <div class="container">
           <ul class="portfolio-button-list">
             <li><button type="button">Wszystkie</button></li>
             <li><button type="button">Strony</button></li>
@@ -55,8 +56,7 @@
             <li><button type="button">Dizajn</button></li>
             <li><button type="button">Marketing</button></li>
           </ul>
-        </div>
-        <div class="container-projects">
+          <!-- projects -->
           <ul class="projects-list">
             <li>
               <figure>
@@ -188,23 +188,26 @@
         </div>
       </section>
     </main>
-    <div class="container">
-      <!-- footer -->
-      <footer class="footnote">
-        <div class="container-footnote">
-          <div class="logo-bottom">
+    <!-- footer -->
+    <footer class="footnote">
+      <div class="container">
+        <div class="logo-bottom">
           <a href="index.html"
             ><span class="logo-anterior">Web</span
             ><span class="logo-posterior-prim">Studio</span>
-            </a>
+          </a>
         </div>
-          <address class="address-bottom">
-            <span>m. Warszawa, Aleje Jerozolimskie 21</span>
-            <a class="mail-bottom" href="mailto:info@devstidio.com">info@devstudio.com</a>
-            <a href="tel:+48111111111">+48 111 111 111</a>
-          </address>
-        </div>
-      </footer>
-    </div>
+        <address class="address-bottom">
+          <ul>
+            <li class="headquarters">m. Warszawa, Aleje Jerozolimskie 21</li>
+            <li class="mail-bottom">
+              <a href="mailto:info@devstidio.com">info@devstudio.com</a>
+            </li>
+            <li><a href="tel:+48111111111">+48 111 111 111</a></li>
+          </ul>
+        </address>
+      </div>
+    </footer>
+    <!-- end of footer -->
   </body>
 </html>
