solved most problems with padding and jusify

--- a/portfolio.html
+++ b/portfolio.html
@@ -47,7 +47,7 @@
     <!-- main -->
     <main>
       <!-- filters -->
-      <section class="portfolio-button-projects" class="section">
+      <section class="portfolio-button-projects section">
         <div class="container">
           <ul class="portfolio-button-list">
             <li><button type="button">Wszystkie</button></li>
