--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     <main>
       <!-- main title -->
-      <section class="header" class="section">
+      <section class="header section">
         <div class="container">
           <h1 class="slogan">efektywne rozwiązania dla waszego biznesu</h1>
           <button type="button" class="click-to-order">Zamów usługę</button>
@@ -49,7 +49,7 @@
       </section>
       <!-- advantages -->
 
-      <section class="section">
+      <section class="section section-advantages">
         <div class="container">
           <ul class="adventages">
             <li>
@@ -86,7 +86,7 @@
 
       <!-- what do we do -->
 
-      <section class="section">
+      <section class="section section-what-do-we-do">
         <div class="container">
           <h2 class="what-do-we-do">Czym się zajmujemy</h2>
           <ul class="what-do-we-do-list">
@@ -132,7 +132,7 @@
                   src="images/imgteamcardone.jpg"
                   alt="John Doe's picture"
                 />
-                <figcaption>
+                <figcaption class="team-member">
                   <h3>John Doe</h3>
                   <span>Product Designer</span>
                 </figcaption>
@@ -146,7 +146,7 @@
                   src="images/imgteamcardtwo.jpg"
                   alt="John Doe's picture"
                 />
-                <figcaption>
+                <figcaption class="team-member">
                   <h3>John Doe</h3>
                   <span>Frontend Developer</span>
                 </figcaption>
@@ -160,7 +160,7 @@
                   src="images/imgteamcardthree.jpg"
                   alt="John Doe's picture"
                 />
-                <figcaption>
+                <figcaption class="team-member">
                   <h3>John Doe</h3>
                   <span>Marketing</span>
                 </figcaption>
@@ -174,7 +174,7 @@
                   src="images/imgteamcardfour.jpg"
                   alt="John Doe's picture"
                 />
-                <figcaption>
+                <figcaption class="team-member">
                   <h3>John Doe</h3>
                   <span>UI Designer</span>
                 </figcaption>
