--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       </section>
       <!-- advantages -->
 
-      <section class="section section-advantages">
+      <section class="section">
         <div class="container">
           <ul class="adventages">
             <li>
@@ -81,13 +81,9 @@
               </p>
             </li>
           </ul>
-        </div>
-      </section>
 
-      <!-- what do we do -->
+          <!-- what do we do -->
 
-      <section class="section section-what-do-we-do">
-        <div class="container">
           <h2 class="what-do-we-do">Czym się zajmujemy</h2>
           <ul class="what-do-we-do-list">
             <li>
