changed pretier's name to .prettierrc and deleted one extra normalizer from index.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -9,13 +9,6 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
-      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -28,8 +21,7 @@
     <!-- header -->
     <header class="top">
       <a href="index.html" class="logo"
-        ><span class="logo-anterior">Web</span
-        ><span class="logo-posterior">Studio</span></a
+        ><span class="logo-anterior">Web</span><span class="logo-posterior">Studio</span></a
       >
       <nav>
         <ul class="navigation">
@@ -102,12 +94,7 @@
             </li>
             <li>
               <figure>
-                <img
-                  width="370"
-                  height="294"
-                  src="images/projectfour.jpg"
-                  alt="headphones"
-                />
+                <img width="370" height="294" src="images/projectfour.jpg" alt="headphones" />
                 <figcaption>
                   <h3>Projekt Prime</h3>
                   <span>Marketing</span>
@@ -116,12 +103,7 @@
             </li>
             <li>
               <figure>
-                <img
-                  width="370"
-                  height="294"
-                  src="images/projectfive.jpg"
-                  alt="two boxes"
-                />
+                <img width="370" height="294" src="images/projectfive.jpg" alt="two boxes" />
                 <figcaption>
                   <h3>Projekt Boxes</h3>
                   <span>Aplikacja</span>
@@ -130,12 +112,7 @@
             </li>
             <li>
               <figure>
-                <img
-                  width="370"
-                  height="294"
-                  src="images/projectsix.jpg"
-                  alt="a tv screen"
-                />
+                <img width="370" height="294" src="images/projectsix.jpg" alt="a tv screen" />
                 <figcaption>
                   <h3>Inspiration has no Borders</h3>
                   <span>Strona internetowa</span>
@@ -144,12 +121,7 @@
             </li>
             <li>
               <figure>
-                <img
-                  width="370"
-                  height="294"
-                  src="images/projectseven.jpg"
-                  alt="a book"
-                />
+                <img width="370" height="294" src="images/projectseven.jpg" alt="a book" />
                 <figcaption>
                   <h3>Magazyn Limited Edition</h3>
                   <span>Dizajn</span>
@@ -158,12 +130,7 @@
             </li>
             <li>
               <figure>
-                <img
-                  width="370"
-                  height="294"
-                  src="images/projecteight.jpg"
-                  alt="a label"
-                />
+                <img width="370" height="294" src="images/projecteight.jpg" alt="a label" />
                 <figcaption>
                   <h3>Projekt LAB</h3>
                   <span>Marketing</span>
@@ -193,8 +160,7 @@
       <div class="container">
         <div class="logo-bottom">
           <a href="index.html"
-            ><span class="logo-anterior">Web</span
-            ><span class="logo-posterior-prim">Studio</span>
+            ><span class="logo-anterior">Web</span><span class="logo-posterior-prim">Studio</span>
           </a>
         </div>
         <address class="address-bottom">
